[package]
name = "anomaly_detection"
version = "0.3.1"
description = "Time series anomaly detection for Rust"
repository = "https://github.com/ankane/AnomalyDetection.rs"
license = "GPL-3.0-or-later"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.56.0"
readme = "README.md"

[lib]
doctest = false

[dependencies]
distrs = "0.2"
stlrs = "0.3"
